--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ h1 {
     transition: border 0.3s ease-in-out;
 }
 
-#riskLevel {
+#riskLevelContainer, #dayNumberContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -78,8 +78,8 @@ h1 {
     backdrop-filter: blur(10px);
 }
 
-#riskLevel h4 {
-    margin: 1em;
+#riskLevelContainer h4, #dayNumberContainer h4 {
+    margin: 0 1em;
     text-align: center;
 }
 
@@ -91,15 +91,26 @@ h1 {
     width: 100%;
 }
 
-#slider-label-left{
+#slider-container input {
+    margin-top: 0.5em;
+    width: 10em;
+}
+
+#slider-label-left {
     color: rgb(0, 200, 0);
 }
 
-#slider-label-right{
+#slider-label-right {
     color: rgb(255, 100, 100);
 }
 
-#slider-value {
+#number-slider-day {
+    margin: 1em 0;
+    margin-top: 2em;
+    width: 10em;
+}
+
+#slider-value, #slider-day-value {
     margin-bottom: 1em;
     font-size: 1.5em;
     font-weight: bold;
