--- a/styles.css
+++ b/styles.css
@@ -163,8 +163,10 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    max-width: 100%;
     text-align: center;
     padding: 10px;
     background-color: #121212;
     color: #ffffff;
+    box-sizing: border-box;
 }
